--- a/src/Components/Color/Color.css
+++ b/src/Components/Color/Color.css
@@ -9,3 +9,62 @@
   background: black;
   color: white;
 }
+
+.color-card-highlight {
+  display: inline;
+  padding: 2px 6px;
+  background: black;
+  color: white;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.delete-button {
+  display: inline;
+  padding: 2px 6px;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+
+.delete-button:hover {
+  opacity: 0.8;
+}
+
+.delete-button-confirm {
+  display: inline;
+  padding: 2px 6px;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+
+.delete-button-cancel {
+  display: inline;
+  padding: 2px 6px;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+
+.confirmation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  padding: 10px;
+}
+
+.confirmation-buttons {
+  display: flex;
+  gap: 15px;
+}
