--- a/src/Components/Color/Color.css
+++ b/src/Components/Color/Color.css
@@ -68,3 +68,34 @@
   display: flex;
   gap: 15px;
 }
+
+.buttons {
+  display: flex;
+  gap: 15px;
+}
+
+.edit-button {
+  display: inline;
+  padding: 2px 6px;
+  background: black;
+  color: white;
+}
+
+.edit-form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
+  max-width: 800px;
+  margin: 1rem auto;
+  padding: 1.5rem;
+  background: #00000080;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px #000000cc;
+}
+
+.edit-form-buttons {
+  display: flex;
+  gap: 15px;
+  justify-content: flex-end;
+}
