--- a/src/Components/Color/Color.css
+++ b/src/Components/Color/Color.css
@@ -122,3 +122,9 @@
   border: 1px solid white;
   margin-left: 10px;
 }
+
+.no-color {
+  color: black;
+  font-weight: bold;
+  margin-left: 15px;
+}
