--- a/src/Components/ContrastChecker/ContrastChecker.css
+++ b/src/Components/ContrastChecker/ContrastChecker.css
@@ -1,8 +1,12 @@
 .contrast-checker {
   background-color: black;
-  padding: 10px;
+  padding: 8px;
   border-radius: 5px;
   color: white;
+  margin: 0 0 5px 0;
+  width: fit-content;
+  display: inline-block;
+  border: 1px solid white;
 }
 
 .contrast-checker .result {
